--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Go to folder
         run: cd frontend
 
+      - name: List content
+        run: ls
+
       - name: Install dependencies
         run: npm install
 
