--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,10 @@ jobs:
           cd frontend
           npm install
 
-      - name: Build
-        run: npm run build
+      - name: Build project
+        run: |
+          cd frontend
+          npm run build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
