--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,10 @@ jobs:
           cd frontend
           npm run build
 
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+      - name: Deploy to GitHub Pages
+        run: |
+          cd frontend/build
+          npm install -g gh-pages
+          gh-pages -d .
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
