--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,7 @@ jobs:
 
       - name: Deploy to GitHub Pages
         run: |
-          cd frontend/build
-          npm install -g gh-pages
-          gh-pages -d .
+          cd frontend
+          gh-pages -d dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
