--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,7 @@ jobs:
         run: |
           git config --global user.email "daviraquel@gmail.com"
           git config --global user.name "daviraquel"
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
 
       - name: Deploy to GitHub Pages
         run: |
