--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,9 @@ on:
 
 jobs:
   deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -25,16 +28,28 @@ jobs:
           cd frontend
           npm run build
 
-      - name: Configure Git
-        run: |
-          git config --global user.email "daviraquel@gmail.com"
-          git config --global user.name "daviraquel"
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
+      # - name: Configure Git
+      #   run: |
+      #     git config --global user.email "daviraquel@gmail.com"
+      #     git config --global user.name "daviraquel"
+      #     git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
 
+      # - name: Deploy to GitHub Pages
+      #   run: |
+      #     cd frontend
+      #     npm install -g gh-pages
+      #     gh-pages -d dist
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          # Upload dist folder
+          path: "./dist"
       - name: Deploy to GitHub Pages
-        run: |
-          cd frontend
-          npm install -g gh-pages
-          gh-pages -d dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        id: deployment
+        uses: actions/deploy-pages@v4
